--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {deps, [
+  {gun, {git, "git@github.com:ninenines/gun.git", {branch, "master"}}},
   {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "main"}}
 ]}.
 {eunit_opts, [verbose]}.
