refactor: (WIP) architectural much needed changes.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,11 @@
+{erl_opts, [
+    warnings_as_errors,
+    {src_dirs, ["src"]},
+    {i, "include"}
+]}.
+
 {deps, [
-  {gun, {git, "git@github.com:ninenines/gun.git", {branch, "master"}}},
-  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "main"}}
+    {ncowboy, {git, "git@github.com:nomasystems/ncowboy.git", {branch, "main"}}}
 ]}.
 {eunit_opts, [verbose]}.
 {cover_enabled, true}.
