refactor: (WIP) some architectural changes.

--- a/rebar.config
+++ b/rebar.config
@@ -4,8 +4,31 @@
     {i, "include"}
 ]}.
 
-{deps, [
-    {ncowboy, {git, "git@github.com:nomasystems/ncowboy.git", {branch, "main"}}}
+{shell, [erlazure]}.
+
+{project_plugins, [
+    {erlfmt, {git, "git@github.com:WhatsApp/erlfmt.git", {branch, "main"}}}
 ]}.
+
+{erlfmt, [write]}.
+
+{deps, [
+    {ncowboy, {git, "git@github.com:nomasystems/ncowboy.git", {branch, "feat/erlazure_support"}}}
+]}.
+
+{alias, [
+    {check, [
+        {fmt, "--check"},
+        xref,
+        dialyzer
+    ]},
+    {test, [
+        {ct, "--spec test/conf/test.spec --cover --readable true --verbose"},
+        {cover, "-m 95"}
+    ]}
+]}.
+
 {eunit_opts, [verbose]}.
 {cover_enabled, true}.
+
+{xref_ignores, [erlazure]}.
