refactor: (WIP) architectural review. got it working with gun.

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,8 @@
 {erlfmt, [write]}.
 
 {deps, [
-    {ncowboy, {git, "git@github.com:nomasystems/ncowboy.git", {branch, "feat/erlazure_support"}}}
+    {njson, {git, "git@github.com:nomasystems/njson.git", {branch, "main"}}},
+    {gun, {git, "git@github.com:ninenines/gun.git", {tag, "2.0.1"}}}
 ]}.
 
 {alias, [
