refactor: (WIP) architectural review. replies seem to be the ones now.

--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
 
 {deps, [
     {njson, {git, "git@github.com:nomasystems/njson.git", {branch, "main"}}},
-    {gun, {git, "git@github.com:ninenines/gun.git", {tag, "2.0.1"}}}
+    {gun, {git, "git@github.com:nomasystems/gun.git", {branch, "fix/dont_add_body_headers_on_get"}}}
 ]}.
 
 {alias, [
