--- a/rebar.config
+++ b/rebar.config
@@ -13,8 +13,7 @@
 {erlfmt, [write]}.
 
 {deps, [
-    {njson, {git, "git@github.com:nomasystems/njson.git", {branch, "main"}}},
-    {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "main"}}
+    {njson, {git, "git@github.com:nomasystems/njson.git", {branch, "main"}}}
 ]}.
 
 {alias, [
