Refactor: minimal architecture review (#1)
* refactor: gen_server does not block while requesting.

* chore: prepare library to use on production.

* chore: converted files to unix format (instead of dos).

* query parameters correct encoding.

*  changed jsx by njson.

* some dialyzer improvements.

---------

Co-authored-by: Óscar Lamas Ríos <oscar.lamas@nomasystems.com>

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,35 @@
-{deps, [
-  {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "main"}}
+{erl_opts, [
+    %    warnings_as_errors,
+    {src_dirs, ["src"]},
+    {i, "include"}
 ]}.
+
+{shell, [erlazure]}.
+
+{project_plugins, [
+    {erlfmt, {git, "git@github.com:WhatsApp/erlfmt.git", {branch, "main"}}}
+]}.
+
+{erlfmt, [write]}.
+
+{deps, [
+    {njson, {git, "git@github.com:nomasystems/njson.git", {branch, "main"}}}
+]}.
+
+{alias, [
+    {check, [
+        {fmt, "--check"},
+        dialyzer,
+        xref
+    ]},
+    {test, [
+        {eunit,
+            " suites=erlazure_xml_tests,erlazure_utils_tests,erlazure_queue_tests,erlazure_blob_tests"},
+        {cover, "-m 95"}
+    ]}
+]}.
+
 {eunit_opts, [verbose]}.
 {cover_enabled, true}.
+
+{xref_ignores, [erlazure]}.
