--- a/rebar.config
+++ b/rebar.config
@@ -1,19 +1,17 @@
 {erl_opts, [
-    %    warnings_as_errors,
-    {src_dirs, ["src"]},
-    {i, "include"}
+    warnings_as_errors
 ]}.
 
 {shell, [erlazure]}.
 
 {project_plugins, [
-    {erlfmt, {git, "git@github.com:WhatsApp/erlfmt.git", {branch, "main"}}}
+    erlfmt
 ]}.
 
 {erlfmt, [write]}.
 
 {deps, [
-    {njson, {git, "git@github.com:nomasystems/njson.git", {branch, "main"}}}
+    {njson, {git, "git@github.com:nomasystems/njson.git", {tag, "2.0.0"}}}
 ]}.
 
 {alias, [
